--- a/revel.yaml
+++ b/revel.yaml
@@ -63,6 +63,28 @@ paths:
       - name: "limit"
         in: "query"
         type: "integer"
+    post:
+      operationId: "AssignRoleAndEstablishment"
+      summary: "Assign role and establishment to an employee"
+      description: "Assign role and establishment to an employee"
+      responses:
+        200:
+          description: "The operation was successful."
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "API-AUTHENTICATION"
+        in: "header"
+        type: "string"
+        required: true
+      - name: "body"
+        required: true
+        in: "body"
+        schema:
+          type: "object"
+        description: "body_data"
   /resources/Role/:
     get:
       operationId: "GetRoles"
